--- a/templates/base.html
+++ b/templates/base.html
@@ -131,6 +131,10 @@
                             <i class="bi bi-person-circle"></i> {{ session.user_name }}
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="{{ url_for('change_password') }}">
+                                <i class="bi bi-key"></i> Change Password
+                            </a></li>
+                            <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="{{ url_for('logout') }}">
                                 <i class="bi bi-box-arrow-right"></i> Logout
                             </a></li>
